apps/webapp1/virtualservice/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  hosts:
  - "argocd.internal"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local
