apps/webapp1/virtualservice/prometheus-virtualservice-dashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-dashboard-virtualservice
  namespace: prometheus
spec:
  hosts:
  - "prometheus.internal"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: prometheus-kube-prometheus-prometheus.prometheus.svc.cluster.local
