apps/webapp1/virtualservice/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtualservice
  namespace: prometheus
spec:
  hosts:
  - "grafana.internal"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: prometheus-prometheus-kube-prometheus-prometheus.prometheus.svc.cluster.local
